--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Glassmorphism Website Design</title>
-
       <!-- font awesome cdn link  -->
       <link
          rel="stylesheet"
@@ -13,7 +12,28 @@
       />
 
       <!-- custom css file link  -->
-      <link rel="stylesheet" href="css/style.css" />
+      <link rel="stylesheet" href="./Assets/css/style.css" />
+
+      <!-- Custom JS -->
+
+      <script src="./Assets/js/script.js" defer></script>
    </head>
-   <body></body>
+   <body>
+      <div class="gradient-background"></div>
+
+      <header class="header">
+         <a href="" class="logo"><i class="fas fa-graduation-cap"></i>logo</a>
+
+         <nav class="navbar">
+            <a href="#home">home</a>
+            <a href="courses">courses</a>
+            <a href="#teachers">teachers</a>
+            <a href="#plan">plan</a>
+            <a href="#review">review</a>
+            <a href="#contact">contact</a>
+         </nav>
+
+         <div id="menu-btn" class="fas fa-bars"></div>
+      </header>
+   </body>
 </html>
