Created Home section: Structure and styling

--- a/index.html
+++ b/index.html
@@ -35,5 +35,14 @@
 
          <div id="menu-btn" class="fas fa-bars"></div>
       </header>
+
+      <section class="home" id="home">
+         <div class="content">
+            <h3>Discover a new way of learning</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero ipsa repudiandae, molestiae quibusdam quisquam!</p>
+            <a href="#" class="btn">read more</a>
+         </div>
+      </section>
+
    </body>
 </html>
