--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
          <nav class="navbar">
             <a href="#home">home</a>
-            <a href="courses">courses</a>
+            <a href="#courses">courses</a>
             <a href="#teachers">teachers</a>
             <a href="#plan">plan</a>
             <a href="#review">review</a>
@@ -42,6 +42,83 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero ipsa repudiandae, molestiae quibusdam quisquam!</p>
             <a href="#" class="btn">read more</a>
          </div>
+      </section>
+
+      <section class="courses" id="courses">
+
+         <h1 class="heading"> <span>our courses</span> </h1>
+
+         <div class="box-container">
+
+            <div class="box">
+               <img src="./Assets/image/course-1.svg" alt="">
+               <h3>web designing</h3>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, placeat!</p>
+               <a href="#" class="btn">read more</a>
+               <div class="icons">
+                  <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
+                  <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+               </div>
+            </div>
+
+            <div class="box">
+               <img src="./Assets/image/course-2.svg" alt="">
+               <h3>seo marketing</h3>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, placeat!</p>
+               <a href="#" class="btn">read more</a>
+               <div class="icons">
+                  <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
+                  <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+               </div>
+            </div>
+            
+            <div class="box">
+               <img src="./Assets/image/course-3.svg" alt="">
+               <h3>science and technology</h3>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, placeat!</p>
+               <a href="#" class="btn">read more</a>
+               <div class="icons">
+                  <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
+                  <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+               </div>
+            </div>
+
+            <div class="box">
+               <img src="./Assets/image/course-4.svg" alt="">
+               <h3>music and dancing</h3>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, placeat!</p>
+               <a href="#" class="btn">read more</a>
+               <div class="icons">
+                  <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
+                  <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+               </div>
+            </div>
+
+            <div class="box">
+               <img src="./Assets/image/course-5.svg" alt="">
+               <h3>teaching and staff</h3>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, placeat!</p>
+               <a href="#" class="btn">read more</a>
+               <div class="icons">
+                  <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
+                  <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+               </div>
+            </div>
+            
+            <div class="box">
+               <img src="./Assets/image/course-6.svg" alt="">
+               <h3>graphic designing</h3>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, placeat!</p>
+               <a href="#" class="btn">read more</a>
+               <div class="icons">
+                  <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
+                  <a href="#"> <i class="fas fa-clock"></i> 6 hours </a>
+               </div>
+            </div>
+
+
+         </div>
+
       </section>
 
    </body>
