--- a/index.html
+++ b/index.html
@@ -264,8 +264,140 @@
       </section>
 
       <section class="review" id="review">
+         <h1 class="heading"><span>student's review</span></h1>
+
+         <div class="box-container">
+            <div class="box">
+               <div class="image">
+                  <i class="fas fa-quote-left"></i>
+                  <img src="./Assets/image/pic-1.png" alt="" />
+                  <i class="fas fa-quote-right"></i>
+               </div>
+               <h3>john deo</h3>
+               <span>happy student</span>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Eaque, omnis?
+               </p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+               </div>
+            </div>
+
+            <div class="box">
+               <div class="image">
+                  <i class="fas fa-quote-left"></i>
+                  <img src="./Assets/image/pic-2.png" alt="" />
+                  <i class="fas fa-quote-right"></i>
+               </div>
+               <h3>john deo</h3>
+               <span>happy student</span>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Eaque, omnis?
+               </p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+               </div>
+            </div>
+
+            <div class="box">
+               <div class="image">
+                  <i class="fas fa-quote-left"></i>
+                  <img src="./Assets/image/pic-3.png" alt="" />
+                  <i class="fas fa-quote-right"></i>
+               </div>
+               <h3>john deo</h3>
+               <span>happy student</span>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Eaque, omnis?
+               </p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+               </div>
+            </div>
+
+            <div class="box">
+               <div class="image">
+                  <i class="fas fa-quote-left"></i>
+                  <img src="./Assets/image/pic-4.png" alt="" />
+                  <i class="fas fa-quote-right"></i>
+               </div>
+               <h3>john deo</h3>
+               <span>happy student</span>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Eaque, omnis?
+               </p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                  <i class="far fa-star"></i>
+               </div>
+            </div>
+
+            <div class="box">
+               <div class="image">
+                  <i class="fas fa-quote-left"></i>
+                  <img src="./Assets/image/pic-5.png" alt="" />
+                  <i class="fas fa-quote-right"></i>
+               </div>
+               <h3>john deo</h3>
+               <span>happy student</span>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Eaque, omnis?
+               </p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+               </div>
+            </div>
+
+            <div class="box">
+               <div class="image">
+                  <i class="fas fa-quote-left"></i>
+                  <img src="./Assets/image/pic-6.png" alt="" />
+                  <i class="fas fa-quote-right"></i>
+               </div>
+               <h3>john deo</h3>
+               <span>happy student</span>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Eaque, omnis?
+               </p>
+               <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <section class="contact" id="contact">
          
       </section>
-      
+
    </body>
 </html>
