--- a/index.html
+++ b/index.html
@@ -396,8 +396,22 @@
       </section>
 
       <section class="contact" id="contact">
-         
+         <h1 class="heading"><span>contact us</span></h1>
+
+         <form action="">
+            <input type="text" placeholder="your name" class="box">
+            <input type="email" placeholder="your email" class="box">
+            <input type="number" placeholder="your number" class="box">
+
+            <textarea name="" id="" placeholder="your message" cols="30" rows="10" class="box"></textarea>
+
+            <input type="submit" value="send message" class="btn">
+         </form>
       </section>
+
+      <footer class="footer">
+         
+      </footer>
 
    </body>
 </html>
