--- a/index.html
+++ b/index.html
@@ -411,6 +411,13 @@
 
       <footer class="footer">
          
+         <div class="share">
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-linkedin"></a>
+         </div>
+         
       </footer>
 
    </body>
