Finished Footer section: Structure and styling

--- a/index.html
+++ b/index.html
@@ -417,6 +417,8 @@
             <a href="#" class="fab fa-instagram"></a>
             <a href="#" class="fab fa-linkedin"></a>
          </div>
+
+         <div class="credit">created by <span>Hiderlan Santana</span> | all rights reserved </div>
          
       </footer>
 
